refactor: clean WalkMovementController + NavigationStatus enum
- Remove dead string tracking in apply() (parkourDecision & co)
- Convert applyParkourVelocityControl/LandingControl/TakeoffGuard/handleJump to void
- Remove unused nextMove field from ParkourExecutionProfile
- Extract clampedSegmentIndex() using Math.clamp (JDK 21), replace 5 occurrences
- Rename b -> nearWaypoint
- Simplify isPartialSupportWaypoint to single expression
- Add NavigationStatus enum (IDLE/CALCULATING/EXECUTING/REPLANNING/FOUND/FAILED)
- Replace hardcoded strings in pathStatus() with NavigationStatus enum values
- Update AnalyticsSnapshot.navigationState to NavigationStatus